force-app/main/default/objects/Recent_Item_Regex__c/Recent_Item_Regex__c.object-meta.xml
<CustomObject>
    <label>Recent Item Regex</label>
    <nameField>
        <label>Pattern</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recent Item Regexs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>