force-app/main/default/objects/Recent_Item_Regex__c/fields/Case_insensitive__c.field-meta.xml
<CustomField>
    <fullName>Case_insensitive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case insensitive</label>
    <type>Checkbox</type>
</CustomField>