force-app/main/default/objects/Recent_Item_Regex__c/fields/Dot_matches_newline__c.field-meta.xml
<CustomField>
    <fullName>Dot_matches_newline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dot matches newline</label>
    <type>Checkbox</type>
</CustomField>