force-app/main/default/objects/Recent_Item_Regex__c/fields/Lookup_User__c.field-meta.xml
<CustomField>
    <fullName>Lookup_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RecentItemRegexs</relationshipName>
    <type>Lookup</type>
</CustomField>