force-app/main/default/objects/Recent_Item_Regex__c/fields/Match_across_newlines__c.field-meta.xml
<CustomField>
    <fullName>Match_across_newlines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Match across newlines</label>
    <type>Checkbox</type>
</CustomField>