force-app/main/default/objects/Recent_Item_Regex__c/fields/Match_string__c.field-meta.xml
<CustomField>
    <fullName>Match_string__c</fullName>
    <label>Match string</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Match a string which contains</fullName>
            </value>
            <value>
                <fullName>Match a string which starts with</fullName>
            </value>
            <value>
                <fullName>Match a string which ends in</fullName>
            </value>
            <value>
                <fullName>Match a string which starts and ends in</fullName>
            </value>
            <value>
                <fullName>Match a string that comes after</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>